// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack with @reshoot/loader should extract image meta and output image in development mode 1`] = `
module.exports = {
  hash: "8e426aa9dee4ea97fc2a0675bba6b036",
  src: "/_/_/_/__fixtures__/lena.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image in development mode 2`] = `
Array [
  "________fixtures___lena.png",
]
`;

exports[`Webpack with @reshoot/loader should extract image meta and output image in production mode 1`] = `
module.exports = {
  hash: "ab38bf3f75a11f905b2211f93b2ae280",
  src: "/ab38bf3f75a11f90.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image in production mode 2`] = `
Array [
  "ab38bf3f75a11f90.png",
]
`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with emitFile disabled 1`] = `
module.exports = {
  hash: "ab38bf3f75a11f905b2211f93b2ae280",
  src: "/ab38bf3f75a11f90.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with emitFile disabled 2`] = `Array []`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with esModule enabled 1`] = `
export default {
  hash: "ab38bf3f75a11f905b2211f93b2ae280",
  src: "/ab38bf3f75a11f90.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with esModule enabled 2`] = `
Array [
  "ab38bf3f75a11f90.png",
]
`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with outputPath as a string 1`] = `
module.exports = {
  hash: "ab38bf3f75a11f905b2211f93b2ae280",
  src: "/ab38bf3f75a11f90.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with outputPath as a string 2`] = `
Array [
  "ab38bf3f75a11f90.png",
]
`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with publicPath as a function 1`] = `
module.exports = {
  hash: "ab38bf3f75a11f905b2211f93b2ae280",
  src: "/images/ab38bf3f75a11f90.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with publicPath as a function 2`] = `
Array [
  "ab38bf3f75a11f90.png",
]
`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with webpack publicPath 1`] = `
module.exports = {
  hash: "ab38bf3f75a11f905b2211f93b2ae280",
  src: "/static/ab38bf3f75a11f90.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image with webpack publicPath 2`] = `
Array [
  "ab38bf3f75a11f90.png",
]
`;

exports[`Webpack with @reshoot/loader should extract image meta and output image without hash length 1`] = `
module.exports = {
  hash: "6695e2fef6c49dcbc78b7d6e1162f7e2",
  src: "/6695e2fef6c49dcb.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image without hash length 2`] = `
Array [
  "6695e2fef6c49dcb.png",
]
`;

exports[`Webpack with @reshoot/loader should extract image meta and output image without options 1`] = `
module.exports = {
  hash: "ab38bf3f75a11f905b2211f93b2ae280",
  src: "/ab38bf3f75a11f90.png",
  width: 512,
  height: 512,
  aspectRatio: 100,
  placeholder:
    "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAIBAMAAAA2IaO4AAAA",
};

`;

exports[`Webpack with @reshoot/loader should extract image meta and output image without options 2`] = `
Array [
  "ab38bf3f75a11f90.png",
]
`;
